[metadata]
name = uroman-python
version = 1.2.8.1
author = Dmitrii Mukhutdinov
author_email = flyingleafe@gmail.com
description = A thin Python wrapper around uroman romanizer written in Perl (https://github.com/isi-nlp/uroman)
keywords = uroman, romanizer

[options]
include_package_data = True
packages = uroman
install_requires =
    langcodes>=3.3.0